[package]
name = "rust-s3-async-ffi"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = {version = "1.38.0", features = ["macros", "rt-multi-thread"]}
rust-s3 = "0.34.0"
ffi-convert = "0.6.1"
ffi-convert-derive = "0.6.1"
futures = "0.3.30"
serde = "1.0.203"
errno = "0.3.9"
nix = {version = "0.29.0", features = ["socket"]}

[dev-dependencies]
config = "0.14.0"
chrono = "0.4.38"

[lib]
name = "rusts3asyncffi"
path = "src/lib.rs"
crate-type = ["cdylib"]

