[package]
name = "rust-s3-async-ffi"
version = "0.4.1"
edition = "2024"
description = "Asynchronous streaming of AWS S3 objects in C and C++ powered by rust-s3"
readme = "README.md"
repository = "https://github.com/lyokha/rust-s3-async-ffi"
categories = ["asynchronous", "web-programming"]
keywords = ["S3", "FFI", "streaming"]
license = "MIT"

[dependencies]
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread"]}
rust-s3 = "0.37.1"
ffi-convert = "0.6.2"
ffi-convert-derive = "0.6.2"
futures = "0.3.31"
serde = "1.0.228"
errno = "0.3.14"
nix = {version = "0.30.1", features = ["socket"]}

[dev-dependencies]
config = "0.15.19"
chrono = "0.4.42"

[lib]
name = "rusts3asyncffi"
path = "src/lib.rs"
crate-type = ["cdylib"]

